[package]
name = "arithmetic"
version = "0.1.0"
edition = "2021"

[dependencies]

[dev-dependencies]
cucumber = "0.21"
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

[[test]]
name = "arithmetic" # this should be the same as the filename of your test target
harness = false  # allows Cucumber to print output instead of libtest
